commit progress